# Algorithm-Selection

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
ASP/: CaD.csv  MANIFEST.in  MakeTrainingData.py  MetaLearner.py  Preprocesser.py  __init__.py  all_scores.csv  distance.csv  metalearning.py  preprocessing.py  test_data.csv  trainingdata.py
Algorithm-Selection/metadata/: CaD.csv  distance.csv
